# hackathon

./: .gitignore  README.md  docker-compose.yml
backend/: .env  .env.example  Cargo.toml
backend/.cargo/: config.toml
backend/examples/: hash_password.rs
backend/migrations/: 0001_init.sql  0002_seed.sql
backend/src/: db.rs  error.rs  main.rs
backend/src/auth/: jwt.rs  mod.rs  password.rs
backend/src/models/: driver.rs  fuel_expense.rs  maintenance.rs  mod.rs  trip.rs  vehicle.rs
backend/src/routes/: auth.rs  drivers.rs  fuel_expense.rs  maintenance.rs  mod.rs  reports.rs  trips.rs  vehicles.rs
frontend/: README.md  index.html  package-lock.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: Layout.jsx  Modal.jsx  StatTile.jsx  StatusBadge.jsx
frontend/src/data/: mockData.js
frontend/src/pages/: Dashboard.jsx  Drivers.jsx  FuelExpense.jsx  Login.jsx  Maintenance.jsx  Reports.jsx  Trips.jsx  Vehicles.jsx
